# PicoWiFiModemUSB

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  flash-pico.sh
src/: CMakeLists.txt  at_basic.h  at_extended.h  at_proprietary.h  globals.h  lfs.c  lfs.h  lwipopts.h  mbedtls_config.h  ser_cdc.c  ser_hal.h  ser_uart.c  support.h  tcp_support.h  time_support.h  tusb_config.h  types.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c  wifi_modem.cpp  wifi_modem.h
